--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -110,7 +110,7 @@ for (tcga_project in tcga_projects) {
 
 
 
-```{r fig.height=9, eval=FALSE}
+```{r fig.height=9, eval=TRUE}
 ntop=100
 idx = rownames(feats)[feats[["methplusplus"]]]
 idx2 = idx[order(feats[idx, ]$l2fc_GSE45332, decreasing = TRUE)][1:ntop]
