--- a/results/03_da_summary.Rmd
+++ b/results/03_da_summary.Rmd
@@ -15,12 +15,8 @@ for (i in 1:length(gses)) {
   names(expression_vector) = rownames(feats)
   expression_vector = expression_vector[!is.na(expression_vector)]
 
-  utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
-  utests[[i]] = utest
-  boxplot(rank(expression_vector)~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), main=paste0("Mann-Whitney U test (pval=", signif(utest$p.value, 3), ")"), ylab=paste0("rank(log2FoldChange)"), xlab="", col=adjustcolor(c("red", "grey"), alpha.f=.5))  
-  if (i==1) {fig_label("B", cex=3)}
 
-  et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3)  
+  utests[[i]] = et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3)  
   if (i==1) {fig_label("C", cex=3)}
 }
 ```
