--- a/results/meta_analysis.Rmd
+++ b/results/meta_analysis.Rmd
@@ -16,12 +16,12 @@ output:
 
 ```{r, echo=FALSE, eval=TRUE}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
+source("common.R")
 ```
 
-
+# Step 1
 
 ```{r}
-
 tcga_projects = c("TCGA-LUSC")
 #, "TCGA-LUAD")
 
@@ -86,7 +86,34 @@ layout(1, respect=TRUE)
 boxplot(nb_cpg_rich~grp, stat1, ylim=c(0,20000), xlab="ud_str")
 
 
+```
 
+# Step 2
+
+```{r}
+foo = sapply(c("feats_raw_250_0_max.xlsx", "feats_raw_250_0_mean.xlsx", "feats_raw_500_0_max.xlsx", "feats_raw_500_0_mean.xlsx", "feats_raw_1000_0_max.xlsx", "feats_raw_1000_0_mean.xlsx", "feats_raw_2500_0_max.xlsx", "feats_raw_2500_0_mean.xlsx"), function(feats_filename){
+  feats = mread.xlsx(feats_filename)
+  rownames(feats) = feats$gene_symbol
+  head(feats)
+  sum(!is.na(feats[idx_cpg_rich_common,]$meanmeth))
+  ret = feats[idx_cpg_rich_common,]$meanmeth
+  names(ret) = idx_cpg_rich_common
+  return(ret)
+}) 
+foo
+head(foo)
+idx_genes = rownames(foo)[!apply(is.na(foo), 1, any)]
+idx_genes
+foo = foo[idx_genes,]
+pairs(foo)
+```
+
+
+
+
+
+
+```{r eval=FALSE}
 feats_filename = "feats_raw_2500_0_max.xlsx"
 feats = mread.xlsx(feats_filename)
 rownames(feats) = feats$gene_symbol
@@ -114,6 +141,38 @@ pairs(data_meanmeth)
 
 
 
+```
+
+
+
+```{r eval=FALSE}
+feats_filename = "feats_raw_2500_0_max.xlsx"
+feats = mread.xlsx(feats_filename)
+rownames(feats) = feats$gene_symbol
+idx_cpg_rich_2500_common = intersect (idx_cpg_rich_2500, idx_cpg_rich_common)
+meanmeth_2500 = feats[idx_cpg_rich_2500_common,]$meanmeth
+feats_filename = "feats_raw_1000_0_max.xlsx"
+feats = mread.xlsx(feats_filename)
+rownames(feats) = feats$gene_symbol
+idx_cpg_rich_1000_common = intersect (idx_cpg_rich_1000, idx_cpg_rich_common)
+meanmeth_1000 = feats[idx_cpg_rich_1000_common,]$meanmeth
+feats_filename = "feats_raw_500_0_max.xlsx"
+feats = mread.xlsx(feats_filename)
+rownames(feats) = feats$gene_symbol
+idx_cpg_rich_500_common = intersect (idx_cpg_rich_500, idx_cpg_rich_common)
+meanmeth_500 = feats[idx_cpg_rich_500_common,]$meanmeth
+feats_filename = "feats_raw_250_0_max.xlsx"
+feats = mread.xlsx(feats_filename)
+rownames(feats) = feats$gene_symbol
+idx_cpg_rich_250_common = intersect (idx_cpg_rich_250, idx_cpg_rich_common)
+meanmeth_250 = feats[idx_cpg_rich_250_common,]$meanmeth
+
+
+data_meanmeth = data.frame(meanmeth_2500,meanmeth_1000,meanmeth_500,meanmeth_250)
+pairs(data_meanmeth)
+
+
+```
 
 
 
@@ -125,6 +184,10 @@ pairs(data_meanmeth)
 
 
 
+
+
+
+```{r eval=FALSE}
 if (!exists("mread.xlsx")) {mread.xlsx = memoise::memoise(openxlsx::read.xlsx)}
 
 stats = NULL
@@ -227,7 +290,7 @@ beta_reg
 # Effect of seq lenght and max/mean reducer function
 
 
-```{r}
+```{r eval=FALSE}
 if (!exists("mread.xlsx")) {mread.xlsx = memoise::memoise(openxlsx::read.xlsx)}
  feature_pretreatments = c("raw")
   
@@ -375,7 +438,7 @@ for (reducer_func2_name in reducer_func2_names) {
 
 # gene intersection
 
-```{r}
+```{r eval = FALSE}
 # gses = c(
 #   "GSE45332", 
 #   "GSE5816", 
@@ -416,7 +479,7 @@ inter=data.frame()
 
 ```
 
-```{r, echo=FALSE, results="verbatim", eval=TRUE}
+```{r, echo=FALSE, results="verbatim", eval=FALSE}
 knitr::kable(inter)
 ```
 
