--- a/results/meta_analysis.Rmd
+++ b/results/meta_analysis.Rmd
@@ -31,7 +31,7 @@ ud_strs = c(2500, 1000, 500, 250)
 feature_pretreatments = c("cen")
 feature_pretreatments = c("raw")
 
-reducer_func2_names = c("mean", "max")
+reducer_func2_names = c("mean", "max", "min")
 
 gses = c(
   "GSE45332", 
@@ -91,7 +91,13 @@ stat1 = data.frame(
 stat1$grp = factor(stat1$grp, levels=c("250","500","1000","2500", "common"))
 layout(1, respect=TRUE)
 boxplot(nb_cpg_rich~grp, stat1, ylim=c(0,20000), xlab="ud_str", main="CpG rich genes")
+```
 
+
+# Step 2: Mean methylation in healthy tissues
+
+
+```{r}
 idx_cpg_rich_common_notna = intersect(
   intersect(
     intersect(
@@ -124,7 +130,9 @@ boxplot(nb_cpg_rich~grp, stat1, ylim=c(0,20000), xlab="ud_str", main="CpG rich g
 
 ```
 
-# Step 2
+
+
+
 
 ```{r, fig.height=9}
 layout(1, respect=TRUE)
@@ -150,9 +158,95 @@ idx_genes = rownames(foo)[!apply(is.na(foo), 1, any)]
 foo = foo[idx_genes,]
 head(foo)
 
-pairs(foo, pch=".")
+pairs(foo, pch=".", main="Mean methylation in healthy tissues")
 ```
 
+# Step 3 
+
+```{r eval=TRUE}
+stats = NULL
+for (feature_pretreatment in feature_pretreatments) {
+  print(feature_pretreatment)
+  for (ud_str in ud_strs) {
+    print(ud_str)
+    for (reducer_func2_name in reducer_func2_names) {
+      print(reducer_func2_name)
+      
+      prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
+      feats_filename = paste0("feats_", prefix3, ".xlsx")
+      print(feats_filename)
+      feats = mread.xlsx (feats_filename)
+        
+      tmp_list = list(
+        feature_pretreatment = feature_pretreatment, 
+        ud_str = ud_str, 
+        reducer_func2_name = reducer_func2_name,
+        nb_rnd_feat = nb_rnd_feat, 
+        nb_cpg_rich = sum(feats$cpg_status %in% "rich"),
+        nb_methpp =   sum(feats$methplusplus)
+      )
+
+      for (gse in gses) {
+        print(gse)
+        gene_set = rownames(feats)[feats[["methplusplus"]]]
+        expression_vector = feats[,paste0("l2fc_", gse)]
+        names(expression_vector) = rownames(feats)
+        expression_vector = expression_vector[!is.na(expression_vector)]
+        utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
+        pv = utest$p.value
+        print(pv)
+        tmp_list[[paste0("utest_pval_", gse)]] = pv
+      }
+
+      
+      if (is.null(stats)) {
+        stats = tmp_list
+      } else{
+        stats = rbind(stats, tmp_list)
+      }
+    }
+  }
+}
+stats
+stats[,1]
+stats = data.frame(lapply(data.frame(stats, stringsAsFactors=FALSE), unlist), stringsAsFactors=FALSE)
+stats[,1]
+
+
+stats = stats[stats$feature_pretreatment=="raw",]
+gses = c(
+  "GSE45332", 
+  "GSE5816", 
+  "GSE14315", 
+  "GSE25427", 
+  "GSE22250")
+gses = gses [1:3]
+feature_pretreatment = feature_pretreatment[1]
+
+layout(1, respect = TRUE)
+plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,60), xlab="up/downstrean TSS window size", ylab="methplusplus enrichment Mann-Whitney")
+for (i in 1:length(gses)) {
+  gse = gses[i]
+  points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
+       col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
+  for (feature_pretreatment in feature_pretreatments) {
+    for (reducer_func2_name in reducer_func2_names) {
+      tmp_idx = stats$reducer_func2_name==reducer_func2_name & stats$feature_pretreatment==feature_pretreatment
+      lines(stats[tmp_idx,]$ud_str, -log10(stats[tmp_idx, paste0("utest_pval_",gse)]), 
+        pch=ifelse(reducer_func2_name=="mean", 1, 2),
+        lty=ifelse(feature_pretreatment=="raw", 1, 2),
+        col=i
+      )
+    }
+  }
+} 
+legend("topleft", 
+  c(gses, "method raw", "method centered", "method mean", "method max"), 
+  col=c(1:length(gses), 1, 1, 1, 1), 
+  lty=c(rep(1, length(gses)), 1:2, 0,0), 
+  pch=c(rep(NA, length(gses)), NA,NA, 1,2)
+)
+```
 
 
 
