--- a/vignettes/03_da_results.Rmd
+++ b/vignettes/03_da_results.Rmd
@@ -1,6 +1,6 @@
 
 ```{r, fig.width=12, fig.height=4}
-source("common.R")
+source("../R/common.R")
 layout(matrix(1:3,1), respect=TRUE)
 
 plot_volcano(feats, gse, gs_name, main=paste0(gse, " - ", model))
