--- a/vignettes/00_meta_analysis.Rmd
+++ b/vignettes/00_meta_analysis.Rmd
@@ -103,8 +103,6 @@ stat2$grp = factor(stat2$grp, levels=c("250","500","1000","2500", "common"))
 
 boxplot(nb_cpg_rich~grp, stat2, ylim=c(0,20000), xlab="ud_str", add = TRUE, border=2)
 legend("bottomright", col=1:2, lty=1, legend=c("nb. CpG rich", "nb. CpG rich with probes"))
-
-
 ```
 
 
@@ -223,139 +221,7 @@ stats[,1]
 stats = data.frame(lapply(data.frame(stats, stringsAsFactors=FALSE), unlist), stringsAsFactors=FALSE)
 stats[,1]
 
-
 stats = stats[stats$feature_pretreatment=="raw",]
-gses = c(
-  "GSE45332", 
-  "GSE5816", 
-  "GSE14315", 
-  "GSE25427", 
-  "GSE22250")
-gses = gses [1:3]
-feature_pretreatment = feature_pretreatment[1]
-
-layout(1, respect = TRUE)
-plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,60), xlab="up/downstrean TSS window size", ylab="methplusplus enrichment Mann-Whitney")
-for (i in 1:length(gses)) {
-  gse = gses[i]
-  points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
-       col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  for (feature_pretreatment in feature_pretreatments) {
-    for (reducer_func2_name in reducer_func2_names) {
-      tmp_idx = stats$reducer_func2_name==reducer_func2_name & stats$feature_pretreatment==feature_pretreatment
-      lines(stats[tmp_idx,]$ud_str, -log10(stats[tmp_idx, paste0("utest_pval_",gse)]), 
-        pch=ifelse(reducer_func2_name=="mean", 1, 2),
-        lty=ifelse(feature_pretreatment=="raw", 1, 2),
-        col=i
-      )
-    }
-  }
-} 
-legend("topleft", 
-  c(gses, "method raw", "method centered", "method mean", "method max"), 
-  col=c(1:length(gses), 1, 1, 1, 1), 
-  lty=c(rep(1, length(gses)), 1:2, 0,0), 
-  pch=c(rep(NA, length(gses)), NA,NA, 1,2)
-)
-```
-
-```{r}
-pdf("bp.pdf", width=18, height = 12)
-layout(matrix(1:24, 4), respect=TRUE)
-  for (i in 1:length(gses)) {
-
-foo = sapply(c(
-  "feats_raw_250_0_mean.xlsx", 
-  "feats_raw_500_0_mean.xlsx", 
-  "feats_raw_1000_0_mean.xlsx", 
-  "feats_raw_2500_0_mean.xlsx",
-  "feats_raw_250_0_max.xlsx", 
-  "feats_raw_500_0_max.xlsx", 
-  "feats_raw_1000_0_max.xlsx", 
-  "feats_raw_2500_0_max.xlsx"
-), function(feats_filename){
-  feats = mread.xlsx(feats_filename)
-  rownames(feats) = feats$gene_symbol
-  head(feats)
-  
-    gse = gses[i]
-    model = models[i]
-    
-    gene_set = rownames(feats)[feats[["methplusplus"]]]
-    expression_vector = feats[,paste0("l2fc_", gse)]
-    names(expression_vector) = rownames(feats)
-    expression_vector = expression_vector[!is.na(expression_vector)]
-    
-    et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE)  
-  
-}) 
-  }
-dev.off()
-
-```
-
-
-
-
-
-```{r eval=FALSE}
-feats_filename = "feats_raw_2500_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_2500_common = intersect (idx_cpg_rich_2500, idx_cpg_rich_common)
-meanmeth_2500 = feats[idx_cpg_rich_2500_common,]$meanmeth
-feats_filename = "feats_raw_1000_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_1000_common = intersect (idx_cpg_rich_1000, idx_cpg_rich_common)
-meanmeth_1000 = feats[idx_cpg_rich_1000_common,]$meanmeth
-feats_filename = "feats_raw_500_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_500_common = intersect (idx_cpg_rich_500, idx_cpg_rich_common)
-meanmeth_500 = feats[idx_cpg_rich_500_common,]$meanmeth
-feats_filename = "feats_raw_250_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_250_common = intersect (idx_cpg_rich_250, idx_cpg_rich_common)
-meanmeth_250 = feats[idx_cpg_rich_250_common,]$meanmeth
-
-
-data_meanmeth = data.frame(meanmeth_2500,meanmeth_1000,meanmeth_500,meanmeth_250)
-pairs(data_meanmeth)
-
-
-
-```
-
-
-
-```{r eval=FALSE}
-feats_filename = "feats_raw_2500_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_2500_common = intersect (idx_cpg_rich_2500, idx_cpg_rich_common)
-meanmeth_2500 = feats[idx_cpg_rich_2500_common,]$meanmeth
-feats_filename = "feats_raw_1000_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_1000_common = intersect (idx_cpg_rich_1000, idx_cpg_rich_common)
-meanmeth_1000 = feats[idx_cpg_rich_1000_common,]$meanmeth
-feats_filename = "feats_raw_500_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_500_common = intersect (idx_cpg_rich_500, idx_cpg_rich_common)
-meanmeth_500 = feats[idx_cpg_rich_500_common,]$meanmeth
-feats_filename = "feats_raw_250_0_max.xlsx"
-feats = mread.xlsx(feats_filename)
-rownames(feats) = feats$gene_symbol
-idx_cpg_rich_250_common = intersect (idx_cpg_rich_250, idx_cpg_rich_common)
-meanmeth_250 = feats[idx_cpg_rich_250_common,]$meanmeth
-
-
-data_meanmeth = data.frame(meanmeth_2500,meanmeth_1000,meanmeth_500,meanmeth_250)
-pairs(data_meanmeth)
-
 
 ```
 
@@ -365,241 +231,10 @@ pairs(data_meanmeth)
 
 
 
-
-
-
-
-
-
-
-```{r eval=FALSE}
-if (!exists("mread.xlsx")) {mread.xlsx = memoise::memoise(openxlsx::read.xlsx)}
-
-stats = NULL
-for (feature_pretreatment in feature_pretreatments) {
-  print(feature_pretreatment)
-  for (ud_str in ud_strs) {
-    print(ud_str)
-    for (reducer_func2_name in reducer_func2_names) {
-      print(reducer_func2_name)
-      
-      prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
-      feats_filename = paste0("feats_", prefix3, ".xlsx")
-      print(feats_filename)
-      feats = mread.xlsx(feats_filename)
-        
-      tmp_list = list(
-        feature_pretreatment = feature_pretreatment, 
-        ud_str = ud_str, 
-        reducer_func2_name = reducer_func2_name,
-        nb_rnd_feat = nb_rnd_feat, 
-        nb_cpg_rich = sum(feats$cpg_status %in% "rich"),
-        nb_methpp =   sum(feats$methplusplus)
-      )
-
-      for (gse in gses) {
-        print(gse)
-        gene_set = rownames(feats)[feats[["methplusplus"]]]
-        expression_vector = feats[,paste0("l2fc_", gse)]
-        names(expression_vector) = rownames(feats)
-        expression_vector = expression_vector[!is.na(expression_vector)]
-        utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
-        pv = utest$p.value
-        print(pv)
-        tmp_list[[paste0("utest_pval_", gse)]] = pv
-      }
-
-      
-      if (is.null(stats)) {
-        stats = tmp_list
-      } else{
-        stats = rbind(stats, tmp_list)
-      }
-    }
-  }
-}
-stats
-stats[,1]
-stats = data.frame(lapply(data.frame(stats, stringsAsFactors=FALSE), unlist), stringsAsFactors=FALSE)
-stats[,1]
-
-
-
-layout(matrix(1:2,1), respect = TRUE)
-plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,70), xlab="ud_str", ylab="-log10(pval_utest)")
-for (i in 1:length(gses)) {
-  gse = gses[i]
-  points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
-       col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  for (reducer_func2_name in reducer_func2_names) {
-    lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, -log10(stats[stats$reducer_func2_name==reducer_func2_name, paste0("utest_pval_",gse)]), 
-           col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  }
-} 
-plot(stats$ud_str, stats$nb_methpp, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2), xlab = "ud_str", ylab = "nbgenes methplusplus")
-for (reducer_func2_name in reducer_func2_names) {
-    lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, stats[stats$reducer_func2_name==reducer_func2_name,]$nb_methpp)
-}
-
-```
-
-
-```{r, eval=FALSE}
-
-layout(matrix(1:4, 2), respect=TRUE)
-beta_reg = c()
-for(ud_str in ud_strs){
-    reducer_func2_name = "mean"
-    feature_pretreatment = "raw"
-    prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
-    feats_raw = openxlsx::read.xlsx (paste0("feats_", prefix3, ".xlsx"))
-    feature_pretreatment = "cen"
-    prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
-    feats_cen = openxlsx::read.xlsx (paste0("feats_", prefix3, ".xlsx"))
-    #plot(jitter(feats_raw$nb_probes), jitter(feats_cen$nb_probes), main=ud_str)
-    #abline(a=0, b=1)
-
-    X = feats_cen$nb_probes
-    Y = feats_raw$nb_probes
-    reg = lm(X~Y)
-    plot(X, Y, main=ud_str, xlab="raw", ylab="center")
-    abline(reg, col = 2)
-    abline(a=0, b=1, lty=2, col="grey")
-    beta_reg = c(beta_reg, reg$coefficients[[2]])
-}
-beta_reg
-
-```
-
-
-# Effect of seq lenght and max/mean reducer function
-
-
-```{r eval=TRUE}
-if (!exists("mread.xlsx")) {mread.xlsx = memoise::memoise(openxlsx::read.xlsx)}
- feature_pretreatments = c("raw")
-  
-stats = NULL
-for (feature_pretreatment in feature_pretreatments) {
-  print(feature_pretreatment)
-  for (ud_str in ud_strs) {
-    print(ud_str)
-    for (reducer_func2_name in reducer_func2_names) {
-      print(reducer_func2_name)
-      
-      prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
-      feats_filename = paste0("feats_", prefix3, ".xlsx")
-      print(feats_filename)
-      feats = mread.xlsx (feats_filename)
-        
-      tmp_list = list(
-        feature_pretreatment = feature_pretreatment, 
-        ud_str = ud_str, 
-        reducer_func2_name = reducer_func2_name,
-        nb_rnd_feat = nb_rnd_feat, 
-        nb_cpg_rich = sum(feats$cpg_status %in% "rich"),
-        nb_methpp =   sum(feats$methplusplus)
-      )
-
-      for (gse in gses) {
-        print(gse)
-        gene_set = rownames(feats)[feats[["methplusplus"]]]
-        expression_vector = feats[,paste0("l2fc_", gse)]
-        names(expression_vector) = rownames(feats)
-        expression_vector = expression_vector[!is.na(expression_vector)]
-        utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
-        pv = utest$p.value
-        print(pv)
-        tmp_list[[paste0("utest_pval_", gse)]] = pv
-      }
-
-      
-      if (is.null(stats)) {
-        stats = tmp_list
-      } else{
-        stats = rbind(stats, tmp_list)
-      }
-    }
-  }
-}
-stats
-stats[,1]
-stats = data.frame(lapply(data.frame(stats, stringsAsFactors=FALSE), unlist), stringsAsFactors=FALSE)
-stats[,1]
-
-
-
-
-my_et_gsea_plot = function(expression_vector, gene_set, prefix, col=c("red", "grey"), nperm=1000, PLOT_GSEA=FALSE) {
-  
-  
+```{r fig.height=18}
+my_et_gsea_plot = function(expression_vector, gene_set, prefix, col=c("red", "grey"), nperm=1000, PLOT_GSEA=FALSE, ...) {
   utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
-  boxplot(rank(expression_vector)~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), main=paste0("u test (pval=", signif(utest$p.value, 3), ")"), ylab=paste0("rank(L2FC)"), xlab="", col=adjustcolor(col, alpha.f=.5))  
-  
-
-  if (PLOT_GSEA) {
-    # den_vec_name = "DEN14TuvsDEN14NT"
-    # n_top = 500
-    # enrichement = "ENRICHED"
-    # i = idx_kc[1]
-
-    top = gene_set
-    gs_filename = paste0(prefix, ".grp")
-    write.table(top, gs_filename, sep="\t", row.names=FALSE, col.names=FALSE, quote=FALSE)
-
-    gsea_input = data.frame(names(expression_vector), expression_vector)
-    gsea_input = gsea_input[order(gsea_input[,2]),]
-    gsea_input_filename = paste0("gsea_input.rnk")
-    print(paste("gsea_input were exported in", gsea_input_filename, "file."))
-    write.table(gsea_input, gsea_input_filename, sep="\t", row.names=FALSE, col.names=FALSE, quote=FALSE)
-
-    gsea_input = read.table(gsea_input_filename, row.names=1)
-    stoda_input = gsea_input[,1]
-    names(stoda_input) = rownames(gsea_input)
-    # stoda::gseaplot(v=stoda_input, gs=top)
-
-    dir.create("gsea_out", showWarnings=FALSE)
-    outdir = paste0("gsea_out/", prefix, "_", i, "")
-    unlink(outdir, recursive=TRUE)
-
-    cmd = "/Applications/GSEA_4.1.0/gsea-cli.sh"
-    args = paste0(" GSEAPreranked -gmx ", gs_filename, " -collapse No_Collapse -mode Max_probe -norm meandiv -nperm ", nperm, " -rnk ", gsea_input_filename, " -scoring_scheme weighted -rpt_label my_analysis -create_svgs false -include_only_symbols true -make_sets true -plot_top_x 20 -rnd_seed timestamp -set_max 100000 -set_min 1 -zip_report false -out ", outdir, "")
-    print(paste(cmd, args))
-    system2(cmd, args)
-
-    endplot_filename = paste0(outdir, "/", list.files(outdir)[1], "/enplot_", gs_filename, "_1.png")
-    endplot_filename
-
-    # grid::grid.raster(png::readPNG("gsea_out/DEN14TuvsDEN14NT_500_DEPLETED_TCGA-3K-AAZ8-01A/my_analysis.GseaPreranked.1623067518202/enplot_gs_DEN14TuvsDEN14NT_500_DEPLETED.grp_1.png"), x=1, y=1, width=1)
-
-    addImg <- function(
-      obj, # an image file imported as an array (e.g. png::readPNG, jpeg::readJPEG)
-      x = NULL, # mid x coordinate for image
-      y = NULL, # mid y coordinate for image
-      width = NULL, # width of image (in x coordinate units)
-      interpolate = TRUE # (passed to graphics::rasterImage) A logical vector (or scalar) indicating whether to apply linear interpolation to the image when drawing. 
-    ){
-      if(is.null(x) | is.null(y) | is.null(width)){stop("Must provide args 'x', 'y', and 'width'")}
-      USR <- par()$usr # A vector of the form c(x1, x2, y1, y2) giving the extremes of the user coordinates of the plotting region
-      PIN <- par()$pin # The current plot dimensions, (width, height), in inches
-      DIM <- dim(obj) # number of x-y pixels for the image
-      ARp <- DIM[1]/DIM[2] # pixel aspect ratio (y/x)
-      WIDi <- width/(USR[2]-USR[1])*PIN[1] # convert width units to inches
-      HEIi <- WIDi * ARp # height in inches
-      HEIu <- HEIi/PIN[2]*(USR[4]-USR[3]) # height in units
-      rasterImage(image = obj, 
-        xleft = x-(width/2), xright = x+(width/2),
-        ybottom = y-(HEIu/2), ytop = y+(HEIu/2), 
-        interpolate = interpolate)
-    }
-    par(mar=c(0, 0, 0, 0))
-    plot.new()  
-    par(mar=c(0, 0, 0, 0))
-    # endplot_filename = "enplot_gs_DEN14TuvsDEN14NT_500_DEPLETED.grp_1.png"
-    addImg(png::readPNG(endplot_filename), x=0.5,y=0.5,width=1)
-    par(mar=c(5.1, 4.1, 4.1, 2.1))    
-  }
-  return(utest)
+  boxplot(rank(expression_vector)~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), main=paste0("u test (pval=", signif(utest$p.value, 3), ")"), ylab=paste0("rank(l2fc)"), xlab="", col=adjustcolor(col, alpha.f=.5), ...)  
 }
 
 layout_mat = rbind(
@@ -608,236 +243,78 @@ rbind(
        c(1,1,1,1),
        matrix(2:9,2, dimnames = list(c("max","mean"),c("0.25kb","0.5kb", "1kb", "2.5kb"))),
        matrix(10:17,2),
-       matrix(18:25,2)
-        
+       matrix(18:25,2)  
      )
 )
 layout_mat
 
 
-pdf("utest_pval.pdf", width=25, height = 18)
+# pdf("utest_pval.pdf", width=25, height = 18)
 layout(layout_mat, respect=TRUE)
 
-#layout(matrix(1:4,1), respect = TRUE)
-plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,70), xlab="ud_str", ylab="-log10(pval_utest)")
+
+plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,60), xlab="up/down-strean TSS window size", ylab="methplusplus enrichment Mann-Whitney", xaxt="n")
+axis(1,at=ud_strs, label=ud_strs)
 for (i in 1:length(gses)) {
   gse = gses[i]
   points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
        col=i+1, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  for (reducer_func2_name in reducer_func2_names) {
-    lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, -log10(stats[stats$reducer_func2_name==reducer_func2_name, paste0("utest_pval_",gse)]), 
-           col=i+1, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  }
-} 
-# plot(stats$ud_str, stats$nb_methpp, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2), xlab = "ud_str", ylab = "nbgenes methplusplus")
-# for (reducer_func2_name in reducer_func2_names) {
-#     lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, stats[stats$reducer_func2_name==reducer_func2_name,]$nb_methpp)
-# }
-
-gse = "GSE45332" 
-#layout(matrix(1:8,2), respect=TRUE)
-foo = sapply(c(
-  "feats_raw_250_0_mean.xlsx", 
-  "feats_raw_250_0_max.xlsx",
-  "feats_raw_500_0_mean.xlsx", 
-  "feats_raw_500_0_max.xlsx",
-  "feats_raw_1000_0_mean.xlsx", 
-  "feats_raw_1000_0_max.xlsx", 
-  "feats_raw_2500_0_mean.xlsx",
-  "feats_raw_2500_0_max.xlsx"
-), function(feats_filename){
-  feats = mread.xlsx(feats_filename)
-  rownames(feats) = feats$gene_symbol
-  #head(feats)
-  
-    #gse = gses[i]
-    #model = models[i]
-    
-    gene_set = rownames(feats)[feats[["methplusplus"]]]
-    expression_vector = feats[,paste0("l2fc_", gse)]
-    names(expression_vector) = rownames(feats)
-    expression_vector = expression_vector[!is.na(expression_vector)]
-    
-    my_et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE, col=c("red", "grey"))  
-  
-}) 
-
-
-gse = "GSE5816" 
-#layout(matrix(1:8,2), respect=TRUE)
-foo = sapply(c(
-  "feats_raw_250_0_mean.xlsx", 
-  "feats_raw_250_0_max.xlsx",
-  "feats_raw_500_0_mean.xlsx", 
-  "feats_raw_500_0_max.xlsx",
-  "feats_raw_1000_0_mean.xlsx", 
-  "feats_raw_1000_0_max.xlsx", 
-  "feats_raw_2500_0_mean.xlsx",
-  "feats_raw_2500_0_max.xlsx"
-), function(feats_filename){
-  feats = mread.xlsx(feats_filename)
-  rownames(feats) = feats$gene_symbol
-  #head(feats)
-  
-    #gse = gses[i]
-    #model = models[i]
-    
-    gene_set = rownames(feats)[feats[["methplusplus"]]]
-    expression_vector = feats[,paste0("l2fc_", gse)]
-    names(expression_vector) = rownames(feats)
-    expression_vector = expression_vector[!is.na(expression_vector)]
-    
-    my_et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE, col=c("green", "grey"))  
-  
-}) 
-
-
-gse = "GSE14315" 
-#layout(matrix(1:8,2), respect=TRUE)
-foo = sapply(c(
-  "feats_raw_250_0_mean.xlsx", 
-  "feats_raw_250_0_max.xlsx",
-  "feats_raw_500_0_mean.xlsx", 
-  "feats_raw_500_0_max.xlsx",
-  "feats_raw_1000_0_mean.xlsx", 
-  "feats_raw_1000_0_max.xlsx", 
-  "feats_raw_2500_0_mean.xlsx",
-  "feats_raw_2500_0_max.xlsx"
-), function(feats_filename){
-  feats = mread.xlsx(feats_filename)
-  rownames(feats) = feats$gene_symbol
-  #head(feats)
-  
-    #gse = gses[i]
-    #model = models[i]
-    
-    gene_set = rownames(feats)[feats[["methplusplus"]]]
-    expression_vector = feats[,paste0("l2fc_", gse)]
-    names(expression_vector) = rownames(feats)
-    expression_vector = expression_vector[!is.na(expression_vector)]
-    
-    my_et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE, col=c("blue", "grey"))  
-  
-}) 
-dev.off()
-```
-
-
-
-
-
-```{r, eval = FALSE}
- feature_pretreatments = c("cen")
-  
-stats = NULL
-for (feature_pretreatment in feature_pretreatments) {
-  print(feature_pretreatment)
-  for (ud_str in ud_strs) {
-    print(ud_str)
+  for (feature_pretreatment in feature_pretreatments) {
     for (reducer_func2_name in reducer_func2_names) {
-      print(reducer_func2_name)
-      
-      prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)
-      feats_filename = paste0("feats_", prefix3, ".xlsx")
-      print(feats_filename)
-      feats = mread.xlsx (feats_filename)
-        
-      tmp_list = list(
-        feature_pretreatment = feature_pretreatment, 
-        ud_str = ud_str, 
-        reducer_func2_name = reducer_func2_name,
-        nb_rnd_feat = nb_rnd_feat, 
-        nb_cpg_rich = sum(feats$cpg_status %in% "rich"),
-        nb_methpp =   sum(feats$methplusplus)
+      tmp_idx = stats$reducer_func2_name==reducer_func2_name & stats$feature_pretreatment==feature_pretreatment
+      lines(stats[tmp_idx,]$ud_str, -log10(stats[tmp_idx, paste0("utest_pval_",gse)]), 
+        pch=ifelse(reducer_func2_name=="mean", 1, 2),
+        lty=ifelse(feature_pretreatment=="raw", 1, 2),
+        col=i+1
       )
-
-      for (gse in gses) {
-        print(gse)
-        gene_set = rownames(feats)[feats[["methplusplus"]]]
-        expression_vector = feats[,paste0("l2fc_", gse)]
-        names(expression_vector) = rownames(feats)
-        expression_vector = expression_vector[!is.na(expression_vector)]
-        utest = wilcox.test(expression_vector~ifelse(names(expression_vector)%in%gene_set, "methplusplus", "others"), las=2)
-        pv = utest$p.value
-        print(pv)
-        tmp_list[[paste0("utest_pval_", gse)]] = pv
-      }
-
-      
-      if (is.null(stats)) {
-        stats = tmp_list
-      } else{
-        stats = rbind(stats, tmp_list)
-      }
     }
   }
-}
-stats
-stats = data.frame(lapply(data.frame(stats, stringsAsFactors=FALSE), unlist), stringsAsFactors=FALSE)
-stats[,1]
-
-
-
-layout(matrix(1:2,1), respect = TRUE)
-plot(0,0,col=0, xlim=range(stats$ud_str), ylim=c(0,70), xlab="ud_str", ylab="-log10(pval_utest)")
-for (i in 1:length(gses)) {
-  gse = gses[i]
-  points(stats$ud_str, -log10(stats[[paste0("utest_pval_",gse)]]), 
-       col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  for (reducer_func2_name in reducer_func2_names) {
-    lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, -log10(stats[stats$reducer_func2_name==reducer_func2_name, paste0("utest_pval_",gse)]), 
-           col=i, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2))
-  }
 } 
-plot(stats$ud_str, stats$nb_methpp, pch=ifelse(stats[["reducer_func2_name"]]=="mean", 1, 2), xlab = "ud_str", ylab = "nbgenes methplusplus")
-for (reducer_func2_name in reducer_func2_names) {
-    lines(stats[stats$reducer_func2_name==reducer_func2_name,]$ud_str, stats[stats$reducer_func2_name==reducer_func2_name,]$nb_methpp)
+legend("topleft", 
+  c(gses, "method raw", "method centered", "method mean", "method max"), 
+  col=c((1:length(gses))+1, 1, 1, 1, 1), 
+  lty=c(rep(1, length(gses)), 1:2, 0,0), 
+  pch=c(rep(NA, length(gses)), NA,NA, 1,2)
+)
+
+for (gse in gses) {
+
+  par(mar=c(2.1, 4.1, 0, 0))    
+
+  #layout(matrix(1:8,2), respect=TRUE)
+  foo = sapply(c(
+    "feats_raw_250_0_mean.xlsx", 
+    "feats_raw_250_0_max.xlsx",
+    "feats_raw_500_0_mean.xlsx", 
+    "feats_raw_500_0_max.xlsx",
+    "feats_raw_1000_0_mean.xlsx", 
+    "feats_raw_1000_0_max.xlsx", 
+    "feats_raw_2500_0_mean.xlsx",
+    "feats_raw_2500_0_max.xlsx"
+  ), function(feats_filename){
+    feats = mread.xlsx(feats_filename)
+    rownames(feats) = feats$gene_symbol
+    #head(feats)
+  
+      #gse = gses[i]
+      #model = models[i]
+    
+      gene_set = rownames(feats)[feats[["methplusplus"]]]
+      expression_vector = feats[,paste0("l2fc_", gse)]
+      names(expression_vector) = rownames(feats)
+      expression_vector = expression_vector[!is.na(expression_vector)]
+    
+      my_et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3, PLOT_GSEA=FALSE, col=c("red", "grey"))  
+  
+  }) 
 }
+# dev.off()
+
+par(mar=c(5.1, 4.1, 4.1, 2.1))    
+
 
 ```
 
-# gene intersection
-
-```{r eval = FALSE}
-# gses = c(
-#   "GSE45332", 
-#   "GSE5816", 
-#   "GSE14315")
-feature_pretreatments = c("raw")
-ud_strs = c(2500, 1000, 500, 250)
-
-
-inter=data.frame()
-#for (gse in gses) {
-  
-  for (ud_str in ud_strs) {
-    print(ud_str)
-    print(reducer_func2_name)
-    
-    prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_mean")
-    feats_filename = paste0("feats_", prefix3, ".xlsx")
-    print(feats_filename)
-    feats_mean = mread.xlsx (feats_filename)
-    
-    prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_max")
-    feats_filename = paste0("feats_", prefix3, ".xlsx")
-    print(feats_filename)
-    feats_max = mread.xlsx (feats_filename)
-    
-    tmp= list(
-      ud_str=ud_str,
-      #gse=gse,
-      nb_genes_mean = sum(feats_mean$methplusplus),
-      nb_genes_max = sum(feats_max$methplusplus),
-      common_genes = length(intersect(rownames(feats_mean)[feats_mean[["methplusplus"]]],rownames(feats_max)[feats_max[["methplusplus"]]]))
-    )
-    
-    inter = rbind(inter, tmp)
-  }
-  
-#}
-
-```
 
 ```{r, echo=FALSE, results="verbatim", eval=FALSE}
 knitr::kable(inter)
