--- a/vignettes/03_da_summary.Rmd
+++ b/vignettes/03_da_summary.Rmd
@@ -2,7 +2,7 @@
 ```{r, fig.width=12, fig.height=4}
 utests = list()
 
-source("common.R")
+source("../R/common.R")
 layout(matrix(1:3, 1, byrow=TRUE), respect=TRUE)
 for (i in 1:length(gses)) {
   gse = gses[i]
