Fixing expression_in_gtex

--- a/vignettes/00_meta_analysis.Rmd
+++ b/vignettes/00_meta_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "`demethr` Meta analysis"
+title: "`dmethr` Meta analysis"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
