--- a/vignettes/02_mapreduce_mean.Rmd
+++ b/vignettes/02_mapreduce_mean.Rmd
@@ -223,6 +223,9 @@ dispatched into `r length(unique(s_meth$exp_grp$tissue_group_level1))` tissues. 
 
 ```{r selecting_genes, echo=TRUE, results="verbatim", eval=TRUE}
 table(feats$cpg_status, feats[[gs_name]], useNA="ifany")
+```
+
+```{r expression_in_gtex}
 if (sum(feats[["methplusplus"]]) < 1000) {
   expression_in_gtex(rownames(feats)[feats[["methplusplus"]]])  
 }
